Migrate from Assertj to JUnit Jupiter (#922)
* Migrate from assertj to JUnit Jupiter

* Fix checkstyle